SplashScreen, Onboarding, MenuAwal

--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "app-emedic",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/images/Splash.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
