--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
     "react-native": "^0.76.5",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-neomorph-shadows": "^1.1.2",
+    "react-native-otp-entry": "^1.8.2",
+    "react-native-otp-input": "^1.0.12",
+    "react-native-otp-inputs": "^7.4.0",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^4.12.0",
