--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "react-native-text-input-otp": "^1.0.7",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "react-navigation": "^5.0.0"
+    "expo-video": "~2.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
