--- a/package.json
+++ b/package.json
@@ -34,11 +34,13 @@
     "expo-system-ui": "~4.0.6",
     "expo-video": "~2.0.3",
     "expo-web-browser": "~14.0.1",
+    "firebase": "^11.1.0",
     "metro": "^0.81.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "^0.76.5",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-neomorph-shadows": "^1.1.2",
     "react-native-otp-inputs": "^7.4.0",
     "react-native-paper": "^5.12.5",
