--- a/package.json
+++ b/package.json
@@ -32,17 +32,19 @@
     "expo-status-bar": "~2.0.0",
     "expo-symbols": "~0.2.0",
     "expo-system-ui": "~4.0.6",
-    "expo-video": "~2.0.3",
+    "expo-video": "~2.0.5",
     "expo-web-browser": "~14.0.1",
+    "firebase": "^11.1.0",
     "metro": "^0.81.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "^0.76.5",
     "react-native-drawer-layout": "^4.1.1",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-neomorph-shadows": "^1.1.2",
     "react-native-otp-inputs": "^7.4.0",
-    "react-native-paper": "^5.12.5",
+    "react-native-paper": "^5.13.1",
     "react-native-phone-call": "^1.2.0",
     "react-native-progress": "^5.0.1",
     "react-native-reanimated": "~3.16.1",
