--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "expo-video": "~2.0.5",
     "expo-web-browser": "~14.0.1",
     "firebase": "^11.1.0",
+    "libphonenumber-js": "^1.11.17",
     "metro": "^0.81.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
