--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/art": "^1.2.0",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-picker/picker": "2.9.0",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
@@ -42,13 +43,17 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "^0.76.5",
+    "react-native-checkbox": "^2.0.0",
+    "react-native-date-picker": "^5.0.9",
     "react-native-drawer-layout": "^4.1.1",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-neomorph-shadows": "^1.1.2",
     "react-native-otp-inputs": "^7.4.0",
     "react-native-paper": "^5.13.1",
     "react-native-phone-call": "^1.2.0",
+    "react-native-picker": "^4.3.7",
     "react-native-progress": "^5.0.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
@@ -59,7 +64,10 @@
     "react-native-swiper": "^1.6.0",
     "react-native-text-input-otp": "^1.0.7",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5"
+    "react-native-webview": "13.12.5",
+    "expo-checkbox": "~4.0.1",
+    "@react-native-community/datetimepicker": "8.2.0",
+    "react-native-maps": "1.18.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
