--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
-    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/art": "^1.2.0",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
     "@react-navigation/stack": "^7.1.0",
+    "date-fns": "^4.1.0",
     "expo": "^52.0.21",
     "expo-blur": "~14.0.1",
+    "expo-calendar": "~14.0.6",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.0",
@@ -38,6 +40,8 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "^0.76.5",
+    "react-native-calendar-picker": "^8.0.5",
+    "react-native-calendars": "^1.1308.1",
     "react-native-drawer-layout": "^4.1.1",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-neomorph-shadows": "^1.1.2",
@@ -53,7 +57,10 @@
     "react-native-swiper": "^1.6.0",
     "react-native-text-input-otp": "^1.0.7",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5"
+    "react-native-webview": "13.12.5",
+    "react-native-maps": "1.18.0",
+    "@react-native-picker/picker": "2.9.0",
+    "expo-checkbox": "~4.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
