--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/art": "^1.2.0",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-firebase/auth": "^21.7.1",
+    "@react-native-google-signin/google-signin": "^13.1.0",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
@@ -44,6 +46,7 @@
     "react-native": "^0.76.5",
     "react-native-drawer-layout": "^4.1.1",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-google-signin": "^2.1.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-neomorph-shadows": "^1.1.2",
     "react-native-otp-inputs": "^7.4.0",
