--- a/package.json
+++ b/package.json
@@ -73,7 +73,14 @@
     "react-native-swipeable": "^0.6.0",
     "react-native-swiper": "^1.6.0",
     "react-native-text-input-otp": "^1.0.7",
-    "react-native-web": "~0.19.13"
+    "react-native-web": "~0.19.13",
+    "react-native-webview": "13.12.5",
+    "expo-checkbox": "~4.0.1",
+    "@react-native-community/datetimepicker": "8.2.0",
+    "react-native-webview": "13.12.5",
+    "react-native-maps": "1.18.0",
+    "@react-native-picker/picker": "2.9.0",
+    "expo-checkbox": "~4.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
