--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/art": "^1.2.0",
+    "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-picker/picker": "2.9.0",
     "@react-navigation/bottom-tabs": "^7.0.0",
@@ -39,6 +40,7 @@
     "expo-video": "~2.0.5",
     "expo-web-browser": "~14.0.1",
     "firebase": "^11.1.0",
+    "ios": "^0.0.1",
     "libphonenumber-js": "^1.11.17",
     "metro": "^0.81.0",
     "react": "18.3.1",
@@ -66,10 +68,7 @@
     "react-native-swiper": "^1.6.0",
     "react-native-text-input-otp": "^1.0.7",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5",
-    "expo-checkbox": "~4.0.1",
-    "@react-native-community/datetimepicker": "8.2.0",
-    "react-native-maps": "1.18.0"
+    "react-native-webview": "13.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
