--- a/package.json
+++ b/package.json
@@ -20,12 +20,9 @@
     "@react-native-community/art": "^1.2.0",
     "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-community/masked-view": "^0.1.11",
-<<<<<<< HEAD
     "@react-native-firebase/auth": "^21.7.1",
     "@react-native-google-signin/google-signin": "^13.1.0",
-=======
-    "@react-native-picker/picker": "2.9.0",
->>>>>>> 589338f3a5c2c462afd3b92267c07a8cc5007af3
+    "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
@@ -33,12 +30,7 @@
     "date-fns": "^4.1.0",
     "expo": "^52.0.21",
     "expo-blur": "~14.0.1",
-<<<<<<< HEAD
     "expo-checkbox": "^4.0.1",
-=======
-    "expo-calendar": "~14.0.6",
-    "expo-checkbox": "~4.0.1",
->>>>>>> 75ec8ac61091da38bf6398f984fe70c5a0d354f7
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.0",
@@ -81,18 +73,7 @@
     "react-native-swiper": "^1.6.0",
     "react-native-text-input-otp": "^1.0.7",
     "react-native-web": "~0.19.13",
-<<<<<<< HEAD
     "react-native-webview": "13.12.5"
-=======
-    "react-native-webview": "13.12.5",
-    "expo-checkbox": "~4.0.1",
-    "@react-native-community/datetimepicker": "8.2.0",
-    "react-native-maps": "1.18.0"
-    "react-native-webview": "13.12.5",
-    "react-native-maps": "1.18.0",
-    "@react-native-picker/picker": "2.9.0",
-    "expo-checkbox": "~4.0.1"
->>>>>>> 75ec8ac61091da38bf6398f984fe70c5a0d354f7
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
