--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/art": "^1.2.0",
-    "@react-native-community/datetimepicker": "8.2.0",
+    "@react-native-community/datetimepicker": "github:react-native-community/datetimepicker",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/auth": "^21.7.1",
     "@react-native-google-signin/google-signin": "^13.1.0",
@@ -74,13 +74,7 @@
     "react-native-swiper": "^1.6.0",
     "react-native-text-input-otp": "^1.0.7",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5",
-    "expo-checkbox": "~4.0.1",
-    "@react-native-community/datetimepicker": "8.2.0",
-    "react-native-webview": "13.12.5",
-    "react-native-maps": "1.18.0",
-    "@react-native-picker/picker": "2.9.0",
-    "expo-checkbox": "~4.0.1"
+    "react-native-webview": "13.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
