--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@react-native-community/art": "^1.2.0",
     "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-firebase/auth": "^21.7.1",
+    "@react-native-firebase/app": "^21.10.0",
+    "@react-native-firebase/auth": "^21.10.0",
+    "@react-native-firebase/firestore": "^21.10.0",
     "@react-native-google-signin/google-signin": "^13.1.0",
     "@react-native-picker/picker": "2.9.0",
     "@react-navigation/bottom-tabs": "^7.0.0",
@@ -51,7 +53,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "^0.76.5",
-    "react-native-calendar-picker": "^8.0.5",
+    "react-native-calendar-picker": "^6.1.5",
     "react-native-calendars": "^1.1308.1",
     "react-native-checkbox": "^2.0.0",
     "react-native-date-picker": "^5.0.9",
@@ -76,7 +78,8 @@
     "react-native-swiper": "^1.6.0",
     "react-native-text-input-otp": "^1.0.7",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "^13.12.5"
+    "react-native-webview": "^13.12.5",
+    "expo-dev-client": "~5.0.12"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
