--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "expo-calendar": "~14.0.6",
     "expo-checkbox": "~4.0.1",
     "expo-constants": "~17.0.3",
+    "expo-dev-client": "~5.0.12",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.0",
     "expo-linking": "~7.0.3",
@@ -46,7 +47,7 @@
     "expo-system-ui": "~4.0.6",
     "expo-video": "~2.0.5",
     "expo-web-browser": "~14.0.1",
-    "firebase": "^11.1.0",
+    "firebase": "^11.3.1",
     "ios": "^0.0.1",
     "libphonenumber-js": "^1.11.17",
     "metro": "^0.81.0",
@@ -78,8 +79,7 @@
     "react-native-swiper": "^1.6.0",
     "react-native-text-input-otp": "^1.0.7",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "^13.12.5",
-    "expo-dev-client": "~5.0.12"
+    "react-native-webview": "^13.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
