--- a/app.json
+++ b/app.json
@@ -48,6 +48,13 @@
           "supportsBackgroundPlayback": true,
           "supportsPictureInPicture": true
         }
+      ], 
+      [
+        "expo-location",
+        {
+          "location": true,
+          "locationAlwaysAndWhenInUsePermission": true
+        }
       ]
     ],
     "experiments": {
