--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "expo-haptics": "~14.0.0",
     "expo-linking": "~7.0.3",
     "expo-location": "~18.0.6",
-    "expo-router": "^3.1.0",
+    "expo-router": "~4.0.17",
     "expo-splash-screen": "~0.29.18",
     "expo-status-bar": "~2.0.0",
     "expo-symbols": "~0.2.0",
@@ -51,6 +51,7 @@
     "ios": "^0.0.1",
     "libphonenumber-js": "^1.11.17",
     "metro": "^0.81.0",
+    "moment-timezone": "^0.5.47",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "^0.76.5",
