--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "ios": "^0.0.1",
     "libphonenumber-js": "^1.11.20",
     "metro": "^0.81.0",
+    "moment-timezone": "^0.5.47",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "^0.76.5",
