--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
-    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/art": "^1.2.0",
     "@react-native-community/datetimepicker": "^8.2.0",
     "@react-native-community/masked-view": "^0.1.11",
@@ -24,7 +24,7 @@
     "@react-native-firebase/app": "^21.10.1",
     "@react-native-firebase/auth": "^21.10.1",
     "@react-native-firebase/firestore": "^21.10.1",
-    "@react-native-google-signin/google-signin": "^13.1.0",
+    "@react-native-google-signin/google-signin": "^13.2.0",
     "@react-native-picker/picker": "2.9.0",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.14",
@@ -42,7 +42,8 @@
     "expo-haptics": "~14.0.0",
     "expo-linking": "~7.0.3",
     "expo-location": "~18.0.6",
-    "expo-router": "^3.1.0",
+    "expo-notifications": "~0.29.13",
+    "expo-router": "~4.0.17",
     "expo-splash-screen": "~0.29.18",
     "expo-status-bar": "~2.0.0",
     "expo-symbols": "~0.2.0",
@@ -53,6 +54,7 @@
     "ios": "^0.0.1",
     "libphonenumber-js": "^1.11.20",
     "metro": "^0.81.0",
+    "moment-timezone": "^0.5.47",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "^0.76.5",
