--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "react-native-swipeable": "^0.6.0",
     "react-native-swiper": "^1.6.0",
     "react-native-text-input-otp": "^1.0.7",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "^13.13.2"
   },
