--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "@react-native-community/datetimepicker": "^8.2.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/analytics": "^21.10.1",
-    "@react-native-firebase/app": "^21.10.1",
-    "@react-native-firebase/auth": "^21.10.1",
-    "@react-native-firebase/firestore": "^21.10.1",
+    "@react-native-firebase/app": "^21.11.0",
+    "@react-native-firebase/auth": "^21.11.0",
+    "@react-native-firebase/firestore": "^21.11.0",
+    "@react-native-firebase/messaging": "^21.11.0",
     "@react-native-google-signin/google-signin": "^13.2.0",
     "@react-native-picker/picker": "2.9.0",
     "@react-navigation/bottom-tabs": "^7.0.0",
@@ -42,6 +43,7 @@
     "expo-haptics": "~14.0.0",
     "expo-linking": "~7.0.3",
     "expo-location": "~18.0.6",
+    "expo-notifications": "~0.29.13",
     "expo-router": "~4.0.17",
     "expo-splash-screen": "~0.29.18",
     "expo-status-bar": "~2.0.0",
@@ -64,6 +66,7 @@
     "react-native-date-picker": "^5.0.9",
     "react-native-drawer-layout": "^4.1.1",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-firebase": "^5.6.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-google-signin": "^2.1.1",
     "react-native-linear-gradient": "^2.8.3",
@@ -76,6 +79,7 @@
     "react-native-picker": "^4.3.7",
     "react-native-progress": "^5.0.1",
     "react-native-reanimated": "~3.16.1",
+    "react-native-reanimated-skeleton": "^1.5.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-shadow-2": "^7.1.1",
