--- a/app.json
+++ b/app.json
@@ -36,7 +36,8 @@
       },
       "permissions": [
         "android.permission.ACCESS_COARSE_LOCATION",
-        "android.permission.ACCESS_FINE_LOCATION"
+        "android.permission.ACCESS_FINE_LOCATION",
+        "WAKE_LOCK"
       ]
     },
     "web": {
