--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-community/datetimepicker": "^8.2.0",
+    "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-firebase/app": "^21.10.1",
-    "@react-native-firebase/auth": "^21.10.1",
-    "@react-native-firebase/firestore": "^21.10.1",
-    "@react-native-firebase/messaging": "^21.10.1",
+    "@react-native-firebase/app": "^21.12.0",
+    "@react-native-firebase/auth": "^21.12.0",
+    "@react-native-firebase/firestore": "^21.12.0",
+    "@react-native-firebase/messaging": "^21.12.0",
     "@react-native-google-signin/google-signin": "^13.2.0",
     "@react-native-picker/picker": "2.9.0",
     "@react-navigation/bottom-tabs": "^7.0.0",
@@ -30,7 +30,7 @@
     "@react-navigation/native-stack": "^7.2.0",
     "@react-navigation/stack": "^7.1.0",
     "date-fns": "^4.1.0",
-    "expo": "~52.0.36",
+    "expo": "^52.0.0",
     "expo-blur": "~14.0.1",
     "expo-calendar": "~14.0.6",
     "expo-checkbox": "~4.0.1",
@@ -47,6 +47,7 @@
     "expo-status-bar": "~2.0.0",
     "expo-symbols": "~0.2.0",
     "expo-system-ui": "~4.0.6",
+    "expo-task-manager": "~12.0.5",
     "expo-video": "~2.0.5",
     "expo-web-browser": "~14.0.1",
     "firebase": "^11.3.1",
@@ -63,12 +64,10 @@
     "react-native-date-picker": "^5.0.9",
     "react-native-drawer-layout": "^4.1.1",
     "react-native-dropdown-picker": "^5.4.6",
-    "react-native-firebase": "^5.6.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-maps": "1.18.0",
     "react-native-neomorph-shadows": "^1.1.2",
-    "react-native-otp-inputs": "^7.4.0",
     "react-native-paper": "^5.13.1",
     "react-native-phone-call": "^1.2.0",
     "react-native-phone-number-input": "^2.1.0",
