--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "react-native-picker": "^4.3.7",
     "react-native-progress": "^5.0.1",
     "react-native-reanimated": "~3.16.1",
+    "react-native-reanimated-skeleton": "^1.5.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-shadow-2": "^7.1.1",
