--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "app-emedic",
+    "name": "E-Medic",
     "slug": "e-medic",
     "version": "1.0.0",
     "orientation": "portrait",
