--- a/package.json
+++ b/package.json
@@ -17,14 +17,12 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-community/art": "^1.2.0",
-    "@react-native-community/datetimepicker": "^8.2.0",
+    "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-firebase/analytics": "^21.10.1",
-    "@react-native-firebase/app": "^21.11.0",
-    "@react-native-firebase/auth": "^21.11.0",
-    "@react-native-firebase/firestore": "^21.11.0",
-    "@react-native-firebase/messaging": "^21.11.0",
+    "@react-native-firebase/app": "^21.12.0",
+    "@react-native-firebase/auth": "^21.12.0",
+    "@react-native-firebase/firestore": "^21.12.0",
+    "@react-native-firebase/messaging": "^21.12.0",
     "@react-native-google-signin/google-signin": "^13.2.0",
     "@react-native-picker/picker": "2.9.0",
     "@react-navigation/bottom-tabs": "^7.0.0",
@@ -32,23 +30,24 @@
     "@react-navigation/native-stack": "^7.2.0",
     "@react-navigation/stack": "^7.1.0",
     "date-fns": "^4.1.0",
-    "expo": "^52.0.21",
+    "expo": "^52.0.0",
     "expo-blur": "~14.0.1",
     "expo-calendar": "~14.0.6",
     "expo-checkbox": "~4.0.1",
     "expo-constants": "~17.0.3",
     "expo-dev-client": "~5.0.12",
-    "expo-firebase-analytics": "^4.1.0",
+    "expo-device": "^7.0.2",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.0",
     "expo-linking": "~7.0.3",
-    "expo-location": "~18.0.6",
+    "expo-location": "~18.0.7",
     "expo-notifications": "~0.29.13",
     "expo-router": "~4.0.17",
     "expo-splash-screen": "~0.29.18",
     "expo-status-bar": "~2.0.0",
     "expo-symbols": "~0.2.0",
     "expo-system-ui": "~4.0.6",
+    "expo-task-manager": "~12.0.5",
     "expo-video": "~2.0.5",
     "expo-web-browser": "~14.0.1",
     "firebase": "^11.3.1",
@@ -62,34 +61,29 @@
     "react-native-calendar-picker": "^6.1.5",
     "react-native-calendars": "^1.1309.0",
     "react-native-checkbox": "^2.0.0",
-    "react-native-country-picker": "^1.0.2",
     "react-native-date-picker": "^5.0.9",
     "react-native-drawer-layout": "^4.1.1",
     "react-native-dropdown-picker": "^5.4.6",
-    "react-native-firebase": "^5.6.0",
     "react-native-gesture-handler": "~2.20.2",
-    "react-native-google-signin": "^2.1.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-maps": "1.18.0",
     "react-native-neomorph-shadows": "^1.1.2",
-    "react-native-otp-inputs": "^7.4.0",
     "react-native-paper": "^5.13.1",
     "react-native-phone-call": "^1.2.0",
     "react-native-phone-number-input": "^2.1.0",
-    "react-native-picker": "^4.3.7",
     "react-native-progress": "^5.0.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-reanimated-skeleton": "^1.5.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-shadow-2": "^7.1.1",
-    "react-native-svg": "^15.10.1",
+    "react-native-svg": "15.8.0",
     "react-native-swipeable": "^0.6.0",
     "react-native-swiper": "^1.6.0",
     "react-native-text-input-otp": "^1.0.7",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "^13.13.2"
+    "react-native-webview": "13.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
