--- a/package.json
+++ b/package.json
@@ -83,7 +83,8 @@
     "react-native-text-input-otp": "^1.0.7",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5"
+    "react-native-webview": "13.12.5",
+    "expo-av": "~15.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
